# cpp-neural-network-playground

./: CMakeLists.txt  README.md  local-build.cmd
.github/workflows/: build-mingw.yml
src/: ActivationFunction.cpp  BackPropagation.cpp  DrawNeuralNetwork.cpp  DrawText.cpp  ForwardPropagation.cpp  GetMaxElement.cpp  GetMinElement.cpp  Main.cpp
